# tardigrade-overlap-coupling

./: .gitignore  CMakeLists.txt  ReadMe  config.mk
doc/: .gitignore  documentation.tex  micromorphic.bib
doc/img/: Coupling_domain_plot.ipynb
doc/tex/: nomenclature.tex
docs/html/: index.html
docs/sphinx/: api.rst  build.txt  conf.py.in  dependencies.txt  gitlab_setup.rst  targets.txt  user.rst
src/cpp/: .gitignore  CMakeLists.txt  DOFProjection.cpp  DOFProjection.h  assembly.cpp  assembly.h  connectivity.txt  connectivity_2.txt  connectivity_8.txt  dataFileInterface.cpp  dataFileInterface.h  element.cpp  element.h  element_library.cpp  element_library.h  example_data.txt  filter.cpp  filter.h  filter_environment.sh  filter_old.cpp  filter_old.h  generateXDMFData.cpp  generateXDMFData.h  geometry_decomposition.cpp  geometry_decomposition.h  inputFileProcessor.cpp  inputFileProcessor.h  makefile  makefile_filter  makefile_filter_old  makefile_overlap  occonfiguration.h  overlapCoupling.cpp  overlapCoupling.h  overlap_coupling.cpp  overlap_coupling.h  vector_tools.cpp  vector_tools.h  volumeReconstruction.cpp  volumeReconstruction.h
src/cpp/tests/: CMakeLists.txt  dataFileInterface_testConfig.yaml  generateXDMFData_badYAML.yaml  generateXDMFData_xdmf_answer.xdmf  inputFileProcessor_microscale.yaml  inputFileProcessor_testConfig.yaml  test_DOFProjection.cpp  test_assembly.cpp  test_dataFileInterface.cpp  test_element.cpp  test_generateXDMFData.cpp  test_geometry_decomposition.cpp  test_inputFileProcessor.cpp  test_volumeReconstruction.cpp  volumeReconstruction_dualContouring.yaml
src/cpp/tests/DOFProjection/: .gitignore  makefile  test_DOFProjection.cpp
src/cpp/tests/assembly/: .gitignore  makefile  test_assembly.cpp
src/cpp/tests/dataFileInterface/: .gitignore  macroscale_xdmf.h5  macroscale_xdmf.xdmf  makefile  testConfig.yaml  testConfig_polyhedron.yaml  test_dataFileInterface.cpp
src/cpp/tests/element/: .gitignore  makefile  test_element.cpp
src/cpp/tests/element_library/: .gitignore  makefile  test_element_library.cpp
src/cpp/tests/generateXDMFData/: .gitignore  makefile  testYAML.yaml  test_generateXDMFData.cpp  xdmf_answer.xdmf
src/cpp/tests/geometry_decomposition/: .gitignore  makefile  test_geometry_decomposition.cpp
src/cpp/tests/inputFileProcessor/: .gitignore  macroscale.yaml  makefile  microscale.yaml  testConfig.yaml  testConfig_Arlequin.yaml  testFile.yaml  test_inputFileProcessor.cpp
src/cpp/tests/overlapCoupling/: .gitignore  filterConfig.yaml  macroscale.yaml  macroscale_Arlequin.yaml  macroscale_realistic.yaml  makefile  mass_matrix_answer.csv  microscale.yaml  microscale_realistic.yaml  testConfig_Arlequin.yaml  testConfig_Arlequin_realistic.yaml  testConfig_Arlequin_reconstructed.yaml  testConfig_averaged_l2_projection.yaml  testConfig_l2_projection.yaml  test_overlapCoupling.cpp
src/cpp/tests/overlap_coupling/: .gitignore  makefile  overlap.txt  test_overlap_coupling.cpp
src/cpp/tests/testFiles/: .gitignore  macroscale.i  macroscale_xdmf.h5  macroscale_xdmf.xdmf  microscale.i  microscale_filter.i  testConfig.yaml
src/cpp/tests/testFiles/overlap/: clean_files  macroscale.i  microscale.i  run_simulation  testConfig.yaml
src/cpp/tests/vector_tools/: .gitignore  makefile  test_vector_tools.cpp
src/cpp/tests/volumeReconstruction/: .gitignore  dualContouring.yaml  makefile  test_volumeReconstruction.cpp
src/python/: .gitignore  const_stress_example_data.txt  example_data.txt  filter_output_reader.py  generate_configuration_file.py  generate_example_data.ipynb  generate_example_data.py  read_output.py  read_xdmf_output.py
